2013-04-10 Arno Dudek  <webmaster@adgrafik.at>

1.0.1	[BUGFIX] Fixed wrong icon processing for list view.
		[BUGFIX] Fixed wrong URL for uploaded KMLs.

1.0.0	First release. Moved from ad_google_maps